<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".auth.LoginActivity">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/background"
                android:scaleType="fitXY"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerInParent="true"
                android:gravity="center">
            <ImageView
                    android:layout_width="120dp"
                    android:layout_height="80dp"
                    android:layout_marginBottom="20dp"
                    android:src="@drawable/logo"/>
                <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        android:layout_marginEnd="18dp">
                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:paddingStart="@dimen/content_margin_large"
                            android:paddingEnd="@dimen/content_margin_large"
                            android:paddingTop="24dp"
                            android:paddingBottom="24dp"
                            android:background="@drawable/bg_card_blue"
                            android:gravity="center">
                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:layout_marginBottom="@dimen/content_margin_medium"
                                android:text="@string/text_login_header"/>
                        <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:padding="@dimen/content_margin_large"
                                android:layout_marginStart="@dimen/content_margin_large"
                                android:layout_marginTop="@dimen/content_margin_large"
                                android:layout_marginEnd="@dimen/content_margin_large"
                                android:layout_marginBottom="@dimen/content_margin_small"
                                android:background="@drawable/bg_login_input">
                            <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_vertical"
                                    android:src="@drawable/login_username"/>
                            <EditText
                                    android:id="@+id/input_login_username"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="10dp"
                                    android:background="@null"
                                    android:textSize="16sp"
                                    android:hint="@string/text_nisn"
                                    android:inputType="text"/>
                        </LinearLayout>
                        <Button
                                android:id="@+id/btn_login_masuk"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="18dp"
                                android:paddingStart="50dp"
                                android:paddingEnd="50dp"
                                android:text="@string/text_masuk"
                                android:background="@drawable/bg_button_blue"
                                android:textColor="@android:color/white"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="18dp"
                        android:layout_marginStart="18dp"
                        android:layout_marginEnd="18dp">
                    <Button
                            android:id="@+id/btn_login_ortu"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="50dp"
                            android:paddingEnd="50dp"
                            android:text="@string/text_login_ortu"
                            android:background="@drawable/bg_button_blue"
                            android:textColor="@android:color/white"/>
                    <Button
                            android:id="@+id/btn_login_guru"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="50dp"
                            android:paddingEnd="50dp"
                            android:layout_marginTop="@dimen/content_margin_large"
                            android:text="@string/text_login_guru"
                            android:background="@drawable/bg_button_blue"
                            android:textColor="@android:color/white"/>
                </LinearLayout>
        </LinearLayout>
        <RelativeLayout
                android:visibility="gone"
                android:id="@+id/loading_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorTransparent"/>

            <ProgressBar
                    android:layout_centerInParent="true"
                    android:layout_width="50dp"
                    android:layout_height="50dp" />

        </RelativeLayout>
    </RelativeLayout>
</layout>